download link updated

--- a/index.html
+++ b/index.html
@@ -900,8 +900,8 @@
 
             downloadPDF() {
                 const link = document.createElement('a');
-                link.href = 'magazine.pdf';
-                link.download = 'magazine.pdf';
+                link.href = 'Udbhav Issue 1.pdf';
+                link.download = 'Udbhav Issue 1.pdf';
                 link.click();
             }
 
